# youtube_practice

./: docker-compose.local.yml
auth_service/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
auth_service/alembic/: env.py
auth_service/alembic/versions/: 2025_10_16_0425-ad20852ef0dc_.py
auth_service/src/: db.py  dependencies.py  exceptions.py  models.py  redis.py  routers.py  schemas.py  services.py  settings.py  utils.py
mail_service/: Dockerfile  main.py  pyproject.toml  requirements.txt  subscribers.py
mail_service/src/: mailer.py  redis.py  settings.py  subscribers.py  utils.py
mail_service/src/templates/: reset_password.html  verify_email.html
upload_video_service/: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
upload_video_service/alembic/versions/: 2025_10_20_0359-26db5fdb25e6_.py
upload_video_service/src/: db.py  dependencies.py  models.py  routers.py  schemas.py  services.py  settings.py  utils.py
