[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "authx>=1.4.3",
    "bcrypt>=5.0.0",
    "fastapi>=0.118.3",
    "faststream[rabbit]>=0.6.0",
    "greenlet>=3.2.4",
    "pydantic[email]>=2.12.0",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standart]>=0.37.0",
]

[tool.ruff]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-between-types = 1
